<resources>
    <string name="app_name">Shelter</string>
    <string name="animals_label">Animals</string>
    <string name="contact_label">Contact</string>
    <string name="news_label">News</string>
    <string name="postimees_thumbnail">https://f11.pmo.ee/AUPuadt4zS8q5iPGin9551SzoH0=/155x155/smart/nginx/o/2016/11/24/6106027t1h5f3e.png</string>
    <string name="schedule_visit_left">Schedule a visit to meet&#160;</string>
    <string name="schedule_visit_right">!</string>
    <string name="name_placeholder">Name</string>
    <string name="phone_number_visit">+372 5333 9272</string>
    <string name="phone_number_info">+372 5333 9272</string>
    <string name="january">&#160;Jan</string>
    <string name="february">&#160;Feb</string>
    <string name="march">&#160;Mar</string>
    <string name="april">&#160;Apr</string>
    <string name="may">&#160;May</string>
    <string name="june">&#160;Jun</string>
    <string name="july">&#160;Jul</string>
    <string name="august">&#160;Aug</string>
    <string name="september">&#160;Sep</string>
    <string name="october">&#160;Oct</string>
    <string name="november">&#160;Nov</string>
    <string name="december">&#160;Dec</string>
    <string name="settings_label">Settings</string>
    <string name="language_label">LANGUAGE</string>
    <string name="app_theme">APP THEME</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <string name="type_label">Type</string>
    <string name="breed_label">Breed</string>
    <string name="age_label">Age</string>
    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>
    <string name="others">Others</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="other">Other</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="location">Location</string>
    <string name="location_description_1">Roosi 91K in northern Tartu, Raadi district.</string>
    <string name="location_description_2">NB! Shelter is quite far from the Roosi Street.</string>
    <string name="public_transport">Public transport</string>
    <string name="public_transport_description">Ride bus number 27 to ERM, then on foot along Museum Road about 700 meters - follow the signs.</string>
    <string name="by_car">By car</string>
    <string name="car_directions">Follow the signs on Muuseum Road or Roosi Street.</string>
    <string name="visiting_times">Visiting times</string>
    <string name="tue_fri">Tue-Fri</string>
    <string name="visit_time_tue_fri">2:00 PM to 6:00 PM</string>
    <string name="sat">Sat</string>
    <string name="visit_time_sat">12:00 PM to 4:00 PM</string>
    <string name="reception_of_animals">Reception of animals</string>
    <string name="reception_time">9:00 AM to 6:00 PM</string>
    <string name="mon_fri">Mon-Fri</string>
    <string name="reception_info">Animals are not accepted on Saturdays and Sundays.</string>
    <string name="call_enter">Call +372 5333 9272 to enter.</string>
    <string-array name="languages_array">
        <item>Eesti</item>
        <item>English</item>
    </string-array>
</resources>