<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.shelter.HomeFragment"
        android:label="@string/app_name" />
    <fragment
        android:id="@+id/animalsFragment"
        android:name="com.example.shelter.AnimalsFragment"
        android:label="@string/animals_label" />
    <fragment
        android:id="@+id/donateFragment"
        android:name="com.example.shelter.DonateFragment"
        android:label="@string/donate_label" />
    <fragment
        android:id="@+id/contactFragment"
        android:name="com.example.shelter.ContactFragment"
        android:label="@string/contact_label" />
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.example.shelter.NewsFragment"
        android:label="@string/news_label" />
</navigation>