<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="4dp">

            <ImageButton
                android:id="@+id/button_map_full"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_fullscreen_24"
                android:background="@android:color/transparent"  />
        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <ScrollView
        android:id="@+id/location_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/primary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_description_1"
                android:layout_marginTop="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_description_2"
                android:layout_marginTop="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_transport"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_transport_description"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_car"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_directions"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_enter"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_marginTop="24dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>