<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:paddingVertical="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/visiting_times"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:layout_marginStart="32dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="33dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/visit_time_tue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/tue_fri"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/visit_time_tue"
                    android:text="@string/visit_time_tue_fri" />

                <TextView
                    android:id="@+id/visit_time_sat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/visit_time_tue"
                    android:text="@string/sat"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/visit_time_tue"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/visit_time_sat"
                    android:text="@string/visit_time_sat" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/visit_time_sat"
                    android:layout_marginTop="12dp"
                    android:drawableLeft="@drawable/ic_baseline_call_24"
                    android:text="@string/phone_number_visit"
                    app:cornerRadius="8dp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/animals_label"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:layout_marginStart="32dp"/>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:scrollbars="none">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="200dp">

                <fragment
                    android:id="@+id/fragment_container_home"
                    android:name="com.example.shelter.ui.animals.AnimalTypesFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout="@layout/fragment_animal_types_land" />
            </FrameLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/reception_of_animals"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:layout_marginStart="32dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="2dp"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="33dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/reception_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mon_fri"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/reception_time"
                    android:text="@string/reception_time" />

                <TextView
                    android:id="@+id/reception_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/reception_time"
                    android:text="@string/reception_info" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_call_reception"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/reception_info"
                    android:layout_marginTop="12dp"
                    android:drawableLeft="@drawable/ic_baseline_call_24"
                    android:text="@string/phone_number_visit"
                    app:cornerRadius="8dp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
