<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_label"
        android:textColor="@color/primary"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_language"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:entries="@array/languages_array" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#E3E3E3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_theme"
        android:textColor="@color/primary"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:singleSelection="true">

        <Button
            android:id="@+id/button_light_theme"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/light_mode" />

        <Button
            android:id="@+id/button_dark_theme"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode" />

    </com.google.android.material.button.MaterialButtonToggleGroup>
</LinearLayout>