<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_animal"
        android:layout_width="match_parent"
        android:layout_height="330dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textview_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/text_main"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageview_gender"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignBottom="@id/textview_name"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="2dp"
                    android:layout_toEndOf="@id/textview_name" />

                <LinearLayout
                    android:id="@+id/info_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textview_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp">

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/type_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/type_label"
                            android:textColor="@color/text_main"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textview_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:background="#d9d9d9" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/breed_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/breed_label"
                            android:textColor="@color/text_main"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textview_breed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:background="#d9d9d9" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/age_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age_label"
                            android:textColor="@color/text_main"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textview_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>


                <TextView
                    android:id="@+id/textview_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/info_container"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp"
                    android:lineSpacingExtra="4dp" />

                <LinearLayout
                    android:id="@+id/meet_animal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textview_description"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp">

                    <TextView
                        android:id="@+id/text_meet_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule_visit_left" />

                    <TextView
                        android:id="@+id/text_meet_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/primary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_meet_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule_visit_right" />

                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_call"
                    android:layout_width="wrap_content"
                    android:layout_height="54dp"
                    android:layout_below="@+id/meet_animal"
                    android:layout_centerHorizontal="true"
                    android:drawableLeft="@drawable/ic_baseline_call_24"
                    android:text="@string/phone_number_visit"
                    app:cornerRadius="8dp" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</RelativeLayout>