<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingHorizontal="32dp">

    <androidx.cardview.widget.CardView
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/button_dogs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:scaleType="centerCrop"
                android:tint="#4F000000"
                app:srcCompat="@drawable/dogs" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/dogs"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="32dp"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/button_cats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:scaleType="centerCrop"
                android:tint="#4F000000"
                app:srcCompat="@drawable/cats" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cats"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="32dp"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/button_others"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:scaleType="centerCrop"
                android:tint="#4F000000"
                app:srcCompat="@drawable/others" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/others"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>