<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_large">

    <androidx.cardview.widget.CardView
        android:layout_width="240dp"
        android:layout_height="130dp"
        app:cardCornerRadius="@dimen/corner_radius_standard">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/button_dogs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/dogs"
                android:tint="#4F000000"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dogs"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="240dp"
        android:layout_height="130dp"
        app:cardCornerRadius="@dimen/corner_radius_standard"
        android:layout_marginTop="@dimen/margin_large">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/button_cats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/cats"
                android:tint="#4F000000"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cats"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="240dp"
        android:layout_height="130dp"
        app:cardCornerRadius="@dimen/corner_radius_standard"
        android:layout_marginTop="@dimen/margin_large">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/button_others"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/others"
                android:tint="#4F000000"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>